--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grunt-usemin": "~2.0.2"
   },
   "dependencies": {
-    "jquery": "1.9.1 - 3",
+    "jquery": "1.9.1",
     "angular": "1.6.6",
     "angular-cookies": "1.3.0",
     "angular-sanitize": "1.6.6",
